--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,13 @@ body {
   grid-template-columns: 260px 1fr 1fr 1fr;
   grid-template-rows: 0.2fr 3fr;
   grid-template-areas:
-    'sidebar header header header'
-    'sidebar main main main';
+    'sidebar header header  header header header'
+    'sidebar main main main main main';
   height: 100vh;
 }
 
 /* Header  */
-.serche::before {
+/* .serche::before {
   content: "\f002";
   font-weight: 900;
   font-family: var(--fa-style-family-classic);
@@ -48,7 +48,7 @@ body {
   transform: translateY(-50%);
   font-size: 14px;
   color: white;
-}
+} */
 .serche input {
   border: 1px solid #ccc;
   border-radius: 10px;
