--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,43 @@
+.toggle-checbox {
+  -webkit-appearance: none;
+  appearance: none;
+  display: none;
+}
+.toggle-switing {
+  background-color: #ccc;
+  width: 78px;
+  height: 32px;
+  cursor: pointer;
+  transition: 0.3s;
+  position: relative;
+  border-radius: 16px;
+  margin-right: 20px;
+}
+.toggle-switing::before {
+  font-family: "Font Awesome 6 Free";
+  content: "";
+  font-weight: 900;
+  background-color: white;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+.toggle-checbox:checked + .toggle-switing {
+  background-color:rgb(27, 27, 168);
+}
+.toggle-checbox:checked + .toggle-switing::before {
+  content: "";
+  left: 50px;
+  color: var(--blue-color);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -29,11 +69,11 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 100px 1fr 1fr 1fr;
+  grid-template-columns: 100px 1fr ;
   grid-template-rows: 0.2fr 3fr;
   grid-template-areas:
-    'sidebar header header  header header header'
-    'sidebar main main main main main';
+    'sidebar header header    '
+    'sidebar main main ';
   height: 100vh;
 }
 
@@ -74,10 +114,13 @@ body {
   justify-content: space-between;
   padding: 0 30px 0 30px;
   box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+  background-color: #1d2634;
 }
 
 .menu-icon {
   display: none;
+  color: white;
+  cursor: pointer;
 }
 /* End Header  */
 
@@ -149,6 +192,7 @@ body {
   overflow-y: auto;
   padding: 20px 20px;
   color: rgba(255, 255, 255, 0.95);
+  height: 100vh;
 }
 
 .main-title {
@@ -253,3 +297,27 @@ body {
     display: none;
   }
 }
+
+
+/* CUSTOM FONTS */
+@font-face {
+  font-family: A;
+  src: url("/public/fonts/ElMessiri-Bold.ttf");
+  font-weight: 900;
+}
+@font-face {
+  font-family: A;
+  src: url("/public/fonts/ElMessiri-Medium.ttf");
+  font-weight: 500;
+}
+@font-face {
+  font-family: A;
+  src: url("/public/fonts/ElMessiri-Regular.ttf");
+  font-weight: 200;
+}
+@font-face {
+  font-family: A;
+  src: url("/public/fonts/ElMessiri-SemiBold.ttf");
+  font-weight: 700;
+}
+/* =====CUSTOM FONTS==== */
